# python-loom

./: Justfile  pyproject.toml
.github/workflows/: build.yml
loom/: __init__.py  aiospool.py  threadspool.py
loom/tests/: base_test.py
