[project]
name = "loom"
version = "0.0.2"
authors = [
  { name="GiovanH" },
]
description = "Threading tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--failed-first"
